log/ni_app_log_190115_143144.txt
2019-01-15T14:31:45|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\nidaqmx_test\ni_app.py", line 35, in <module>
    app = NI_App(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\nidaqmx_test\ni_app.py", line 18, in setup
    from ni_hardware import NI_DAQ_AO_hw
  File "C:\LabPrograms\Python\nidaqmx_test\ni_hardware.py", line 3, in <module>
    from ni_device import NI_DAQ_device
  File "C:\LabPrograms\Python\nidaqmx_test\ni_device.py", line 51
    if self.task.is_task_done()==True
                                    ^
SyntaxError: invalid syntax

